Implement move handling based on input (#1)
* Implement move handling based on input

* Fix bug; finish logic

* Add strategy pattern to handle moves

* Revert Java version to 17

* Refactor

* Rearrange methods

* Rearrange methods

* Add unit tests

* Add more unit tests; Refactor

* Add Travis CI